crates/orator-core/tests/snapshots/lower_schemas__string_enum.snap
---
source: crates/orator-core/tests/lower_schemas.rs
expression: types
---
[
    TypeDef {
        name: "Priority",
        description: None,
        kind: StringEnum(
            StringEnumDef {
                values: [
                    "low",
                    "medium",
                    "high",
                ],
            },
        ),
    },
    TypeDef {
        name: "Status",
        description: None,
        kind: StringEnum(
            StringEnumDef {
                values: [
                    "active",
                    "inactive",
                    "pending",
                ],
            },
        ),
    },
]
